@@ -231,6 +231,7 @@ dependencies {
 
     // compileOnly "moze_intel.projecte:projecte-${mc_version}:${projecte_version}:api"
     compileOnly "curse.maven:projecte-226410:3722832"
+    // runtimeOnly fg.deobf("curse.maven:projecte-226410:3722831")
     compileOnly "appeng:appliedenergistics2-forge:${applied_energistics_version}:api"
 
     runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${mc_version}-${curios_version}")
