@@ -7,7 +7,7 @@ public final class ADDSynthEnergyCompat {
 
   public static final void sendIMCMessages(final InterModEnqueueEvent event){
     if(Compatibility.PROJECT_E.loaded){
-      // ProjectE.register_emc_values();
+      ProjectE.register_emc_values();
     }
   }
 
