@@ -1,7 +1,6 @@
 package addsynth.overpoweredmod.compatability;
 
-/*
-import addsynth.core.game.Compatability;
+import addsynth.core.compat.Compatibility;
 import addsynth.overpoweredmod.OverpoweredTechnology;
 import addsynth.overpoweredmod.game.reference.OverpoweredBlocks;
 import addsynth.overpoweredmod.game.reference.OverpoweredItems;
@@ -9,14 +8,13 @@ import moze_intel.projecte.api.imc.CustomEMCRegistration;
 import moze_intel.projecte.api.imc.IMCMethods;
 import moze_intel.projecte.api.nss.NSSItem;
 import net.minecraftforge.fml.InterModComms;
-*/
 
 public final class ProjectE {
 
   public static final void register_emc_values(){
-/*
+
     final String sender = OverpoweredTechnology.MOD_ID;
-    final String mod = Compatability.PROJECT_E.modid;
+    final String mod = Compatibility.PROJECT_E.modid;
     final String message = IMCMethods.REGISTER_CUSTOM_EMC;
 
     InterModComms.sendTo(sender, mod, message, () -> new CustomEMCRegistration(NSSItem.createItem(OverpoweredItems.energy_crystal_shards), 7282L));
@@ -25,7 +23,6 @@ public final class ProjectE {
     InterModComms.sendTo(sender, mod, message, () -> new CustomEMCRegistration(NSSItem.createItem(OverpoweredBlocks.light_block),        589824L));
     InterModComms.sendTo(sender, mod, message, () -> new CustomEMCRegistration(NSSItem.createItem(OverpoweredItems.void_crystal),        131072L));
     InterModComms.sendTo(sender, mod, message, () -> new CustomEMCRegistration(NSSItem.createItem(OverpoweredBlocks.null_block),         524288L));
-*/
   }
 
 }
